update connection everything

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: Ani.Cloud
-subtitle: Link Everything
+subtitle: Connecting Everything
 description: 连接一切，从这里开始
 author: anicloud@anicloud.com
 language: zh-Hans
